--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="https://cdn.tailwindcss.com?plugins=typography,forms"></script>
   <title>Commentaires</title>
+  <script src="script.js" defer></script>
 </head>
 <body class="antialiased font-sans bg-white">
   <div>
@@ -95,6 +96,5 @@
       </div>
     </div>
   </div>
-  <script src="script.js"></script>
 </body>
 </html>
