--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Commentaires</title>
-  <script src="script.js" defer></script>
 </head>
 <body class="antialiased font-sans bg-white">
   <div>
@@ -95,5 +94,7 @@
       </div>
     </div>
   </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
