--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://cdn.tailwindcss.com?plugins=typography,forms"></script>
   <title>Commentaires</title>
 </head>
 <body class="antialiased font-sans bg-white">
@@ -94,7 +95,6 @@
       </div>
     </div>
   </div>
-
-  <script src="script.js"></script>
+  <script src="assets/JS/script.js"></script>
 </body>
 </html>
